# text-translator

./: .gitignore  LICENSE  README.md  requirements.txt
.github/workflows/: branch-protection.yml  python-app.yml  release.yml
translator/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt
translator/models/: translator.py
translator/ui/: area_capture_tab.py  file_tab.py  history_tab.py  main_window.py  screen_capture_tab.py  settings_tab.py  theme.py
translator/utils/: hotkeys.py  ocr.py  screenshot.py  window_manager.py
